--- a/index.html
+++ b/index.html
@@ -104,6 +104,161 @@
       box-shadow:0 10px 30px rgba(0,0,0,.1)
     }
 
+    .agendamento {
+  padding: 60px 20px;
+  text-align: center;
+}
+
+.agendamento h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.calendar input {
+  padding: 10px;
+  font-size: 1rem;
+  margin-bottom: 20px;
+}
+
+.horarios-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+  gap: 10px;
+  max-width: 400px;
+  margin: 0 auto 30px;
+}
+
+.hora {
+  padding: 10px;
+  border: 1px solid #000;
+  background: transparent;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.hora:hover {
+  background: #9aff3d;
+  color: #000;
+}
+
+.hora.selecionado {
+  background: #9aff3d;
+  color: #000;
+  font-weight: 600;
+}
+
+#agendar {
+  padding: 15px 30px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: none;
+  background: #000;
+  color: #9aff3d;
+  opacity: 0.5;
+}
+
+#agendar:enabled {
+  opacity: 1;
+}
+
+.calendar-box {
+  width: 100%;
+  max-width: 400px;        /* REMOVE o limite */
+  background: #fff;
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+}
+
+.calendar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.calendar-header button {
+  background: none;
+  border: none;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+.calendar-weekdays,
+.calendar-days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  text-align: center;
+}
+
+.calendar-weekdays span {
+  font-size: .8rem;
+  opacity: .6;
+}
+
+.calendar-days span {
+  padding: 10px 0;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: .3s;
+}
+
+.calendar-days span:hover {
+  background: #9aff3d;
+}
+
+.calendar-days .selected {
+  background: #9aff3d;
+  font-weight: 600;
+}
+
+.calendar-days .disabled {
+  opacity: .3;
+  pointer-events: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.agendamento-container {
+  display: grid;
+  grid-template-columns: 1.6fr 1fr;
+  gap: 30px;
+  align-items: stretch;
+
+  max-width: 1100px;   /* controla largura total */
+  margin: 60px auto;   /* CENTRALIZA DE VERDADE */
+}
+
+.map-box {
+  background: #fff;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+}
+
+.map-box iframe {
+  width: 100%;
+  height: 100%;
+  min-height: 380px;
+  border: 0;
+}
+
+/* RESPONSIVO */
+@media (max-width: 900px) {
+  .agendamento-container {
+    grid-template-columns: 1fr;
+  }
+
+  .map-box iframe {
+    min-height: 300px;
+  }
+}
+
+
+
+
     footer{background:#111;color:#fff;text-align:center;padding:40px}
 
     /* ===== RESPONSIVO ===== */
@@ -146,6 +301,85 @@
     <video src="video2.mp4" muted loop></video>
   </div>
 </section>
+
+<section class="agendamento" id="agendamento">
+  <h2>Agende seu horário</h2>
+
+  <div class="agendamento-container">
+
+    <!-- CALENDÁRIO -->
+    <div class="calendar-box">
+      <div class="calendar-header">
+        <button id="prevMonth">‹</button>
+        <span id="monthYear"></span>
+        <button id="nextMonth">›</button>
+      </div>
+
+      <div class="calendar-weekdays">
+        <span>Dom</span><span>Seg</span><span>Ter</span>
+        <span>Qua</span><span>Qui</span><span>Sex</span><span>Sáb</span>
+      </div>
+
+      <div class="calendar-days" id="calendarDays"></div>
+    </div>
+
+    <!-- MAPA -->
+    <div class="map-box">
+      <iframe
+        src="https://www.google.com/maps?q=-22.889782,-43.291231&output=embed"
+        allowfullscreen
+        loading="lazy">
+      </iframe>
+    </div>
+
+  </div>
+
+  <!-- HORÁRIOS -->
+  <div class="horarios hidden" id="horarios">
+    <p>Horários disponíveis</p>
+    <div class="horarios-grid">
+      <button class="hora">09:00</button>
+      <button class="hora">10:00</button>
+      <button class="hora">11:00</button>
+      <button class="hora">13:00</button>
+      <button class="hora">14:00</button>
+      <button class="hora">15:00</button>
+      <button class="hora">16:00</button>
+      <button class="hora">17:00</button>
+    </div>
+  </div>
+
+  <button id="agendar" disabled>Agendar pelo WhatsApp</button>
+</section>
+
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+<script>
+  // CONFIGURAÇÃO REAL DO SEU PROJETO
+  const firebaseConfig = {
+    apiKey: "AIzaSyC0RaPDGMVD1OQjNPeCXwbF7Aj3ZdjaenQ",
+    authDomain: "lemonhair-f53d1.firebaseapp.com",
+    projectId: "lemonhair-f53d1",
+    storageBucket: "lemonhair-f53d1.firebasestorage.app",
+    messagingSenderId: "902031456288",
+    appId: "1:902031456288:web:658ed366567c11f764a445",
+    measurementId: "G-DKKJ02WQ42"
+  };
+
+  // INICIALIZA FIREBASE
+  firebase.initializeApp(firebaseConfig);
+
+  // REFERÊNCIA DO FIRESTORE
+  const db = firebase.firestore();
+</script>
+
+<!-- SEU SCRIPT DE AGENDAMENTO -->
+<script src="agendamento.js"></script>
+
+
 
 <section class="services">
   <h2>Serviços</h2>
@@ -194,3 +428,4 @@
 
 </body>
 </html>
+
